Fixed layout bug in Chrome and Firefox

--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@ body {
   }
 
   .svg-container {
-    display: flex;
     position: relative;
     width: 33%;
     overflow: auto;
